--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,5 @@
-# PlatformIO specific
 .pio
-.pioenvs
-.piolibdeps
-.pio/build
-
-# IDE/Editor specific
-.vscode/
-.idea/
-*.swp
-*.swo
-*.sublime-workspace
-*.sublime-project
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Other
-*.log
-*.pyc
-__pycache__/
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
